# swagger.json
@@ -21,6 +21,59 @@
     "https"
   ],
   "paths": {
+    "/auth/github": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/fail": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/auth/me": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/books": {
       "get": {
         "tags": [
@@ -40,7 +93,7 @@
         "tags": [
           "Books"
         ],
-        "description": "",
+        "description": "Requires login via /auth/github (browser will include session cookie).",
         "parameters": [
           {
             "name": "obj",
@@ -91,6 +144,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -131,7 +187,7 @@
         "tags": [
           "Books"
         ],
-        "description": "",
+        "description": "Requires login via /auth/github (browser will include session cookie).",
         "parameters": [
           {
             "name": "id",
@@ -189,6 +245,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -201,7 +260,7 @@
         "tags": [
           "Books"
         ],
-        "description": "",
+        "description": "Requires login via /auth/github (browser will include session cookie).",
         "parameters": [
           {
             "name": "id",
@@ -216,6 +275,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -245,7 +307,7 @@
         "tags": [
           "Authors"
         ],
-        "description": "",
+        "description": "Requires login via /auth/github (browser will include session cookie).",
         "parameters": [
           {
             "name": "obj",
@@ -284,6 +346,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -324,7 +389,7 @@
         "tags": [
           "Authors"
         ],
-        "description": "",
+        "description": "Requires login via /auth/github (browser will include session cookie).",
         "parameters": [
           {
             "name": "id",
@@ -370,6 +435,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -382,7 +450,7 @@
         "tags": [
           "Authors"
         ],
-        "description": "",
+        "description": "Requires login via /auth/github (browser will include session cookie).",
         "parameters": [
           {
             "name": "id",
@@ -397,6 +465,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
